--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "express": "^4.17.1",
+    "socket.io": "^2.3.0",
     "twitch": "^4.0.10",
     "twitch-chat-client": "^4.0.10"
   }
