--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "better-sqlite3": "^7.1.0",
     "chalk": "^4.1.0",
     "express": "^4.17.1",
     "loglevel": "^1.6.8",
